[package]
name = "tui-components"
version = "0.1.0"
authors = ["BenHall-7 <Benjaminjahall@gmail.com>"]
description = "Reusable components and event handler structure for tui-rs programs"
license = "MIT"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = "0.20"
num = "0.4"
regex = "1"
